# curng-demo

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt
cmake/: CURNGConfig.cmake.in  CURNGUtils.cmake  config.h.in  curng_version.cmake  curng_version.cpp.in
example/: CMakeLists.txt  example.cc
scripts/: cmake_summit  cmake_vostok
src/curng/: Macros.h  Traits.hpp  random.cuh
src/curng/cuda/: random.cuh
src/curng/cxx/: random.cuh
test/: CMakeLists.txt
